# SuperCon2022

./: CMakeLists.txt  README.md  runner.ps1  sc1.cpp  sc2.cpp  sc3.cpp  sc3.cpp.bak
T0M0K4ZU/: T0M0K4ZU-env.txt  sc1.cpp
final/: CMakeLists.txt  MPI_test.cpp  a.out  main  main.cpp  main2.cpp  main3.cpp
final/sample/: a.out  main_MPI.cpp  main_OpenMP_only.cpp
final/sample/team_XXX_MPI/: README.md  main.cpp  run_cases.sh
final/sample/team_XXX_MPI/tests/: jobscript.sh  judge.cpp  random_02.in  random_03.in  random_06.in  random_07.in  random_08.in  random_10.in
final/sample/team_XXX_OpenMP_only/: README.md  main.cpp  run_cases.sh
final/sample/team_XXX_OpenMP_only/tests/: 00_sample_01.in  00_sample_02.in  generator.cpp  random_01.in  random_04.in  random_05.in  random_09.in  sc_header.h
sc1/: CMakeLists.txt  compile_gene_sc1.sh  gene_sc1.c  gene_sc1.sh  sc1.h
sc1/SFMT-src-1.5.1/: test-sse2-M11213  test-sse2-M1279  test-sse2-M132049  test-sse2-M19937  test-sse2-M216091  test-sse2-M44497  test-sse2-M607  test-sse2-M86243  test-std-M11213  test-std-M216091  test-std-M4253  test-std-M607
sc2/: CMakeLists.txt  compile_gene_sc2.sh  gene_sc2.c  gene_sc2.sh  sc2.h  sc2_problem.h
sc2/SFMT-src-1.5.1/: test-sse2-M2281  test-sse2-M4253  test-std-M132049
sc3/: CMakeLists.txt  compile_gene_sc3.sh  gene_sc3.c  gene_sc3.sh  sc3.h  sc3_problem.h
sc3/SFMT-src-1.5.1/: test-std-M1279  test-std-M19937  test-std-M2281  test-std-M44497  test-std-M86243
src1/1/: Main.cpp
src1/3/: Main3_final.cpp
src1/7/: Main7_final.cpp
src1/9/: Main9_final.cpp
